Correct speaker bio flipping spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12471,8 +12471,7 @@ Build date: 2018-12-11 23:23:51
 	transform: rotateY(180deg); }
 
 .flip-container, .front, .back {
-	width: 100%;
-	height: 308px; }
+	width: 100%; }
 
 .flipper {
 	transition: 0.6s;
@@ -12481,7 +12480,7 @@ Build date: 2018-12-11 23:23:51
 
 .flip-container .front, .flip-container .back {
 	backface-visibility: hidden;
-	position: absolute;
+	position: relative;
 	top: 0;
 	left: 0; }
 
@@ -12490,6 +12489,7 @@ Build date: 2018-12-11 23:23:51
 	transform: rotateY(0deg); }
 
 .flip-container .back {
+  position: absolute;
 	transform: rotateY(180deg);
   padding-left: 40px; }
 
